

Änderungen
----------

v0.8.6 (??.01.2012)
 * Bugfix for cal extension
 * Support for match sets in matchtable
 * Support for volleyball in leaguetable

v0.8.5 (08.12.2012)
 * New filter options for cal extension

v0.8.4 (10.03.2012)
 * #64 League table is empty on start of saison

v0.8.3 (21.12.2011)
 * Pointsystem selection in leaguetable is now dynamic for selected sports

v0.8.2 (21.12.2011) (not released)
 * Match date: show no kickoff time in FE if not set. Thanks to saerdna78 from typo3.org forum!
 * #52: Exception in league table alltime fixed.
 * ROLL-Markers added and configured in TeamView for players
 * ScopeSelection configured for report plugin
 * New Leaguetable: Set H2H-mode by TS: leaguetable.comparatorClass = tx_cfcleaguefe_table_football_ComparatorH2H
 * Match report: display match notes with listbuilder.
 * Bugfix: Don't cache scope if no cObj UID is available
 * New marker ###MATCH_DCRESULTSUFFIX### to indicate extra time and penalty
 * Leaguetable works for icehockey in 2 and 3 point system
 * NPE in distance calculation fixed if wec_map is not installed
 * Substitution cache disabled for matchlist to save memory

v0.8.1 (17.10.2010)
 * Leaguetable: new head to head mode. That means the direct match decides the position if points are equals. Set this by TS: leaguetable.compareMethod = compareTeamsH2H. Thanks to Christophe Denis!
 * #49: number of matches is used to calculate league table
 * #48: Template for match status -1 included 
 * #47: Result calculation changed

v0.8.0 (21.10.2010)
 * MatchTable: Output markers for profile data in filter items changed
 * Leaguetable in match report: TS config path fixed
 * ProfileView: Example subparts for player and referee statistics with t3sportstats

v0.7.8 (05.10.2010)
 * It is possible to show team notes in profile view. Link is build in team view.
 * Filter class for matchtable
 * Display filter data for players and referees in matchtable