@@ -82,6 +82,14 @@ class tx_cfcleaguefe_table_icehockey_Table extends tx_cfcleaguefe_table_football
 
 			$this->addWinCount($homeId);
 			$this->addLoseCount($guestId);
+			if($match->isPenalty()) {
+				$this->addWinCountPenalty($homeId);
+				$this->addLooseCountPenalty($guestId);
+			}
+			elseif($match->isExtraTime()) {
+				$this->addWinCountOvertime($homeId);
+				$this->addLooseCountOvertime($guestId);
+			}
 		}
 		else { // Auswärtssieg
 			$this->addPoints($homeId, $configurator->getPointsLoose($match->isExtraTime(), $match->isPenalty()));
@@ -91,6 +99,14 @@ class tx_cfcleaguefe_table_icehockey_Table extends tx_cfcleaguefe_table_football
 			}
 			$this->addLoseCount($homeId);
 			$this->addWinCount($guestId);
+			if($match->isPenalty()) {
+				$this->addWinCountPenalty($guestId);
+				$this->addLooseCountPenalty($homeId);
+			}
+			elseif($match->isExtraTime()) {
+				$this->addWinCountOvertime($guestId);
+				$this->addLooseCountOvertime($homeId);
+			}
 		}
 
 		// Jetzt die Tore summieren
@@ -119,15 +135,23 @@ class tx_cfcleaguefe_table_icehockey_Table extends tx_cfcleaguefe_table_football
 			$this->addDrawCount($homeId);
 		}
 		elseif($toto == 1) {  // Heimsieg
-			$this->addPoints($homeId, $configurator->getPointsWin());
+			$this->addPoints($homeId, $configurator->getPointsWin($match->isExtraTime(), $match->isPenalty()));
 			$this->addWinCount($homeId);
+			if($match->isPenalty())
+				$this->addWinCountPenalty($homeId);
+			elseif($match->isExtraTime())
+				$this->addWinCountOvertime($homeId);
 		}
 		else { // Auswärtssieg
-			$this->addPoints($homeId, $configurator->getPointsLoose());
+			$this->addPoints($homeId, $configurator->getPointsLoose($match->isExtraTime(), $match->isPenalty()));
 			if($configurator->isCountLoosePoints()) {
-				$this->addPoints2($homeId, $configurator->getPointsWin());
+				$this->addPoints2($homeId, $configurator->getPointsWin($match->isExtraTime(), $match->isPenalty()));
 			}
 			$this->addLoseCount($homeId);
+			if($match->isPenalty())
+				$this->addLooseCountPenalty($homeId);
+			elseif($match->isExtraTime())
+				$this->addLooseCountOvertime($homeId);
 		}
 		// Jetzt die Tore summieren
 		$this->addGoals($homeId, $match->getGoalsHome(), $match->getGoalsGuest());
@@ -155,19 +179,60 @@ class tx_cfcleaguefe_table_icehockey_Table extends tx_cfcleaguefe_table_football
 			$this->addDrawCount($guestId);
 		}
 		elseif($toto == 1) {  // Heimsieg
-			$this->addPoints($guestId, $configurator->getPointsLoose());
+			$this->addPoints($guestId, $configurator->getPointsLoose($match->isExtraTime(), $match->isPenalty()));
 			if($configurator->isCountLoosePoints()) {
-				$this->addPoints2($guestId, $configurator->getPointsWin());
+				$this->addPoints2($guestId, $configurator->getPointsWin($match->isExtraTime(), $match->isPenalty()));
 			}
 			$this->addLoseCount($guestId);
+			if($match->isPenalty())
+				$this->addLooseCountPenalty($guestId);
+			elseif($match->isExtraTime())
+				$this->addLooseCountOvertime($guestId);
 		}
 		else { // Auswärtssieg
-			$this->addPoints($guestId, $configurator->getPointsWin());
+			$this->addPoints($guestId, $configurator->getPointsWin($match->isExtraTime(), $match->isPenalty()));
 			$this->addWinCount($guestId);
+			if($match->isPenalty())
+				$this->addWinCountPenalty($guestId);
+			elseif($match->isExtraTime())
+				$this->addWinCountOvertime($guestId);
 		}
 
 		// Jetzt die Tore summieren
 		$this->addGoals($guestId, $match->getGoalsGuest(), $match->getGoalsHome());
+	}
+
+	/**
+	 * Addiert Siege nach Penalty
+	 */
+	protected function addWinCountPenalty($teamId) {
+		$this->_teamData[$teamId]['wincount_penalty'] = $this->_teamData[$teamId]['wincount_penalty'] + 1;
+	}
+	/**
+	 * Addiert Niederlagen nach Penalty
+	 */
+	protected function addLooseCountPenalty($teamId) {
+		$this->_teamData[$teamId]['loosecount_penalty'] = $this->_teamData[$teamId]['loosecount_penalty'] + 1;
+	}
+
+	/**
+	 * Addiert Siege nach Verlängerung
+	 */
+	protected function addWinCountOvertime($teamId) {
+		$this->_teamData[$teamId]['wincount_overtime'] = $this->_teamData[$teamId]['wincount_overtime'] + 1;
+	}
+	/**
+	 * Addiert Niederlagen nach Verlängerung
+	 */
+	protected function addLooseCountOvertime($teamId) {
+		$this->_teamData[$teamId]['loosecount_overtime'] = $this->_teamData[$teamId]['loosecount_overtime'] + 1;
+	}
+
+	protected function initTeam($teamId) {
+		$this->_teamData[$teamId]['wincount_penalty'] = 0;
+		$this->_teamData[$teamId]['loosecount_penalty'] = 0;
+		$this->_teamData[$teamId]['wincount_overtime'] = 0;
+		$this->_teamData[$teamId]['loosecount_overtime'] = 0;
 	}
 
 	public function getTypeID() {return 'icehockey';}
