@@ -170,7 +170,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 <div class="cfcleague-leaguetable">
 <table cellspacing="0" cellpadding="0" class="cfcleague-leaguetable">
 <tr>
-  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_GOALS###</th><th>###LABEL_DIFF###</th><th>###LABEL_POINTS###</th>
+  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>OTs</th><th>Ps</th><th>Pn</th><th>OTn</th><th>###LABEL_GOALS###</th><th>###LABEL_DIFF###</th><th>###LABEL_POINTS###</th>
 </tr>
 
 ###ROW###
@@ -181,6 +181,10 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
   <td>###ROW_WINCOUNT###</td>
   <td>###ROW_DRAWCOUNT###</td>
   <td>###ROW_LOSECOUNT###</td>
+  <td>###ROW_WINCOUNT_OVERTIME###</td>
+  <td>###ROW_WINCOUNT_PENALTY###</td>
+  <td>###ROW_LOOSECOUNT_PENALTY###</td>
+  <td>###ROW_LOOSECOUNT_OVERTIME###</td>
   <td>###ROW_GOALS1###:###ROW_GOALS2###</td>
   <td>###ROW_GOALS_DIFF###</td>
   <td>###ROW_POINTS######ROW_POINTS2###</td>
